--- a/index.html
+++ b/index.html
@@ -7,11 +7,50 @@
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    hej hej
-    
     <title>Johns Inlupp</title>
 </head>
 <body>
+
+    <div class="header-bg">
+
+        <!-- Navbar -->
+
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container">
+                <img src="images/logo.png" alt="">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbar">
+                      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-warning" aria-current="page" href="#">About Us</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-primary" aria-current="page" href="#">Features</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-primary" aria-current="page" href="#">Screens</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link text-primary" aria-current="page" href="#">Contact Us</a>
+                          </li>
+                          <button class="btn btn-warning">Get the app</button>
+
+                      </ul>
+
+                  </div>
+            </div>
+
+
+
+        </nav>
+
+
+    </div>
     
 
 
