--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                   <div class="collapse navbar-collapse" id="navbar">
                       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link text-warning" aria-current="page" href="#"><u>Home</u></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link text-warning" aria-current="page" href="#">About Us</a>
+                            <a class="nav-link text-primary" aria-current="page" href="#">About Us</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link text-primary" aria-current="page" href="#">Features</a>
@@ -39,7 +39,7 @@
                           <li class="nav-item">
                             <a class="nav-link text-primary" aria-current="page" href="#">Contact Us</a>
                           </li>
-                          <button class="btn btn-warning">Get the app</button>
+                          <button class="btn btn-warning text-white">Get the app</button>
 
                       </ul>
 
