bilder och ändrat mobilen

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a class="nav-link text-warning" aria-current="page" href="#"><u>Home</u></a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link text-primary" aria-current="page" href="#">About Us</a>
+                            <a class="nav-link text-primarygit" aria-current="page" href="#">About Us</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link text-primary" aria-current="page" href="#">Features</a>
@@ -64,10 +64,7 @@
             </div>
                 
             <div class="mobile col-12 col-lg-6 wow animate__animated animate__fadeInRight">
-                <img src="images/iPhone X - Light.png" alt="">
-            </div>
-            <div class="mobile col-12 col-lg-6 wow animate__animated animate__fadeInLeft">
-                <img src="images/iPhone X - Light.png" alt="">
+                <img src="images/Mobile.png" alt="">
             </div>
         </div>
     </div>
