--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <!-- Navbar -->
 
         <nav class="navbar navbar-expand-lg navbar-dark">
+          <!-- <img src="images/Rectangle 1914.png" alt="">
+          <img src="images/Group 4634.png" alt=""> -->
             <div class="container">
                 <img src="images/logo.png" alt="">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,16 +63,56 @@
                 <h1>Creative Way to Showcase Your APP</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati ipsa deleniti culpa, repudiandae iure laudantium!</p>
                 <button type="button" class="btn btn-primary">Primary</button>
+                <img src="images/Watch video.png" alt="">
             </div>
                 
             <div class="mobile col-12 col-lg-6 wow animate__animated animate__fadeInRight">
-                <img src="images/Mobile.png" alt="">
+                <img class="ml-2" src="images/Mobile.png" alt="">
             </div>
         </div>
     </div>
 
 
   </div>
+
+  <section class="my-5">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-6 col-lg-3 mb-4 mb-lg-0 wow animate__animated animate__bounce" data-wow-offset="200">
+          <div class="card-body p-4">
+            <img src="images/ec-logo-mono-1.png" alt="">
+          </div>
+        </div>
+
+        <div class="col-6 col-lg-3 wow animate__animated animate__fadeInUp" data-wow-offset="200" data-wow-delay="0.4s">
+          <div class="card-body p-4">
+            <img src="images/ec-logo-mono-1.png" alt="">
+          </div>
+        </div>
+
+        <div class="col-6 col-lg-3 wow animate__animated animate__fadeInUp" data-wow-offset="200"data-wow-delay="0.8s">
+          <div class="card-body p-4">
+            <img src="images/ec-logo-mono-1.png" alt="">
+          </div>
+        </div>
+
+        <div class="col-6 col-lg-3 wow animate__animated animate__fadeInRight" data-wow-offset="200"data-wow-delay="1.2s">
+          <div class="card-body p-4">
+            <img src="images/ec-logo-mono-1.png" alt="">
+          </div>
+        </div>
+
+      </div>
+
+
+
+
+    </div>
+
+
+
+  </section>
 
     
 
