håller på med telefonen i cirkeln

--- a/index.html
+++ b/index.html
@@ -102,15 +102,19 @@
             <img src="images/ec-logo-mono-1.png" alt="">
           </div>
         </div>
-
       </div>
-
-
-
 
     </div>
 
+  </section>
 
+  <section class="pt-5">
+    <div class="container">
+      <div>
+        <img class="circle" src="images/bg.png" alt="cirklar"><i class="Phoneci"><img src="images/Image Place here-1.png" alt="Phone"></i>
+      </div>
+       
+    </div>
 
   </section>
 
