--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <section class="pt-5">
     <div class="container">
       <div>
-        <img class="circle" src="images/bg.png" alt="cirklar"><i class="Phoneci"><img src="images/Image Place here-1.png" alt="Phone"></i>
+        <img class="" src="images/bg.png" alt="cirklar"><i class=""><img src="images/Image Place here-1.png" alt="Phone"></i>
       </div>
        
     </div>
