--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
   <section class="pt-5">
     <div class="container">
       <div>
-        <img class="" src="images/bg.png" alt="cirklar"><i class=""><img src="images/Image Place here-1.png" alt="Phone"></i>
+        <!-- <background-image></background-image> -->
+        <img class="circlephone"src="images/bg.png" alt="cirklar">
       </div>
        
     </div>
