--- a/index.html
+++ b/index.html
@@ -108,23 +108,22 @@
 
   </section>
 
-  <section class="pt-5 container">
-      <div class="mt-5">  
-        <img class="circlephone"src="images/bg.png" alt="cirklar">
-        <!-- <a href="images/iPhone X - Light.png"></a> -->
-    </div>
-
-    <div class="">
-      <div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-lg-6 circlephone">
+        <img src="images/iPhone X - Light.png" alt="cirklar">
+      </div>
+      <div class="col-md-12 col-lg-6">
         <button class="btn-warning">About us</button>
-        <div> 
         <h1>Easy To Search Your Items By this app</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore impedit in amet deleniti ad nulla, magni, maiores sunt laudantium, possimus ea deserunt doloremque sapiente voluptas ab expedita. Natus, recusandae tempore!</p>
-      </div>
-      </div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, harum ex ducimus dolore eius maxime. Sed non quos sint unde vel magnam provident ab suscipit, veniam veritatis soluta eaque ex!</p>
     </div>
+    </div>
+  </div>
 
-  </section>
+
+
+
 
   <!-- <section class="container">
     <div>
