--- a/index.html
+++ b/index.html
@@ -79,25 +79,25 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-6 col-lg-3 mb-4 mb-lg-0 wow animate__animated animate__bounce" data-wow-offset="200">
+        <div class="col-lg-3 col-sm-6 wow animate__animated animate__bounce" data-wow-offset="200">
           <div class="card-body p-4">
             <img src="images/ec-logo-mono-1.png" alt="">
           </div>
         </div>
 
-        <div class="col-6 col-lg-3 wow animate__animated animate__fadeInUp" data-wow-offset="200" data-wow-delay="0.4s">
+        <div class="col-lg-3 col-sm-6 d-none d-sm-block wow animate__animated animate__fadeInUp" data-wow-offset="200" data-wow-delay="0.4s">
           <div class="card-body p-4">
             <img src="images/ec-logo-mono-1.png" alt="">
           </div>
         </div>
 
-        <div class="col-6 col-lg-3 wow animate__animated animate__fadeInUp" data-wow-offset="200"data-wow-delay="0.8s">
+        <div class="col-lg-3 col-sm-6 d-none d-lg-block wow animate__animated animate__fadeInUp" data-wow-offset="200"data-wow-delay="0.8s">
           <div class="card-body p-4">
             <img src="images/ec-logo-mono-1.png" alt="">
           </div>
         </div>
 
-        <div class="col-6 col-lg-3 wow animate__animated animate__fadeInRight" data-wow-offset="200"data-wow-delay="1.2s">
+        <div class="col-lg-3 col-sm-6 d-none d-lg-block wow animate__animated animate__fadeInRight" data-wow-offset="200"data-wow-delay="1.2s">
           <div class="card-body p-4">
             <img src="images/ec-logo-mono-1.png" alt="">
           </div>
