--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6 d-none d-lg-block wow animate__animated animate__fadeInRight" data-wow-offset="200"data-wow-delay="1.2s">
+        <div class="col-lg-3 col-sm-6 d-none d-lg-block block wow animate__animated animate__fadeInRight" data-wow-offset="200"data-wow-delay="1.2s">
           <div class="card-body p-4">
             <img src="images/ec-logo-mono-1.png" alt="">
           </div>
@@ -108,6 +108,8 @@
 
   </section>
 
+
+<section> 
   <div class="container">
     <div class="row">
       <div class="col-md-12 col-lg-6 circlephone">
@@ -120,18 +122,29 @@
     </div>
     </div>
   </div>
+ </section>
 
+<section class="my-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-6">
+         <h1>Easy To Search Your Items By This App</h1>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id tempore repellendus sed repellat quis nihil veritatis libero architecto fugiat. Eaque labore minus at nam fuga ex vitae voluptatem adipisci aspernatur!</p>
+        <div>
+         
+        </div>
+      </div>
 
-
-
-
-  <!-- <section class="container">
-    <div>
-      <div class="circle-1"><i class="screen-1"></i></div>
     </div>
+  </div>
 
 
-  </section> -->
+
+
+</section>
+
+
+ 
 
     
   <div style="height: 500px;" class="bg-primary"></div>
