--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
         
         <div class="row">
           <div class="col-8 col-sm-6"> 
-          <img src="images/icon.png" alt=""><h5>Ease of search</h5>
+          <h5><img src="images/icon.png" alt="">Ease of search</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, eveniet?</p>
 
-          <img src="images/icon-2.png" alt=""><h5>Manage your ads</h5>
+          <img src="images/icon-1.png" alt=""><h5>Ease main</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, nam!</p>
          </div>
           <div class="col-4 col-sm-6">
-          <img src="images/icon-1.png" alt=""><h5>Ease main</h5>
+          <img src="images/icon-2.png" alt=""><h5>Manage your ads</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, magni!</p>
 
           <img src="images/icon-3.png" alt=""><h5>Ongoing support</h5>
