--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 col-lg-6 circlephone">
-        <img src="images/iPhone X - Light.png" alt="cirklar">
+        <img src="images/iPhone X - Light.png" class="wow animate__animated animate__fadeInLeft" data-wow-offset="200"data-wow-delay="0.4s"" alt="cirklar">
       </div>
-      <div class="col-md-12 col-lg-6">
+      <div class="col-md-12 col-lg-6 wow animate__animated animate__fadeInRight" data-wow-offset="200"data-wow-delay="0.8s"">
         <button class="btn-warning">About us</button>
         <h1>Easy To Search Your Items By this app</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, harum ex ducimus dolore eius maxime. Sed non quos sint unde vel magnam provident ab suscipit, veniam veritatis soluta eaque ex!</p>
@@ -221,7 +221,36 @@
   </div>
 </Section>
 
-<form action=""></form>
+
+
+<form class="my-5">
+  <div class="container"> 
+    <div class="text-center">
+  <h1>Contact US</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, numquam quidem alias, consectetur culpa vel, sit nulla optio ea nostrum nesciunt odio. Illo architecto ut neque optio quae molestias autem!</p>
+  <div class="row">
+    <div class="col">
+      <input type="text" class="form-control" placeholder="First name">
+    </div>
+    <div class="col">
+      <input type="text" class="form-control" placeholder="Last name">
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlTextarea1">Example textarea</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+   
+  </div>
+</div>
+</div> 
+<div class="d-flex justify-content-center">
+<button class="bg bg-primary item-center">Send</button>
+</div>
+</form>
+
+<footer>
+
+</footer>
 
 
  
