försöker med karusellen

--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
 
 </section>
 
+
+<!-- slick Rick Carousel -->
+
 <section id="slideshow">  
 <div class="container my-5">
   <div class="text-center ms-auto">
@@ -168,10 +171,11 @@
   
   <div class="slick">
     <div><img src="images/iPhone X - Light.png" alt=""></div>
-    <!-- <div><img src="images/iPhone X - Light.png" alt=""></div>
     <div><img src="images/iPhone X - Light.png" alt=""></div>
-    <div><img src="images/iPhone X - Light.png" alt=""></div> -->
+    <div><img src="images/iPhone X - Light.png" alt=""></div>
+    <div><img src="images/iPhone X - Light.png" alt=""></div>
   </div>
+  
 
   <div class="my-5">
     <h1>Application Statistics </h1>
