--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     
     <div class="container">
 
-        <div class="row mt-5 align-items-center">
-            <div class="text text-center col-12 col-lg-6 text-lg-start wow animate__animated animate__fadeInLeft">
+        <div class="row mt-5">
+            <div class="col-12 col-lg-6 text-lg-start wow animate__animated animate__fadeInLeft">
                 <h1>Creative Way to Showcase Your APP</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati ipsa deleniti culpa, repudiandae iure laudantium!</p>
                 <button type="button" class="btn btn-outline-secondary">Primary</button>
@@ -112,20 +112,24 @@
   </section>
 
 
-<section> 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 col-lg-6 circlephone">
-        <img src="images/iPhone X - Light.png" class="wow animate__animated animate__fadeInLeft" data-wow-offset="200"data-wow-delay="0.4s"" alt="cirklar">
+  <section> 
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-lg-6 circlephone">
+          <img src="images/iPhone X - Light.png" class="wow animate__animated animate__fadeInLeft" data-wow-offset="200"data-wow-delay="0.4s"" alt="cirklar">
+        </div>
+        <div class="col-md-12 col-lg-6 wow animate__animated animate__fadeInRight" data-wow-offset="200"data-wow-delay="0.8s"">
+          <div class="vertical"> 
+          <button class="btn-warning">About us</button>
+          <h1>Easy To Search Your Items By this app</h1>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam facilis autem voluptates suscipit quod mollitia fugiat! Magnam provident nesciunt aliquid eos asperiores hic laboriosam eligendi voluptate optio ea in vero voluptas, similique expedita? Nobis consectetur inventore ipsum cum, officiis nemo optio sed? Nobis cum eaque tenetur odit delectus minima at!</p>
+          </div>
       </div>
-      <div class="col-md-12 col-lg-6 wow animate__animated animate__fadeInRight" data-wow-offset="200"data-wow-delay="0.8s"">
-        <button class="btn-warning">About us</button>
-        <h1>Easy To Search Your Items By this app</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, harum ex ducimus dolore eius maxime. Sed non quos sint unde vel magnam provident ab suscipit, veniam veritatis soluta eaque ex!</p>
+      </div>
     </div>
-    </div>
-  </div>
- </section>
+   </section>
+
+
 
 <section class="my-5">
   <div class="container">
@@ -184,20 +188,20 @@
   </div>
       <div class="d-flex justify-content-between">
           <div>
-            <h5> + 1430</h5>
-            <p>Clients</p>                             
+            <h3> + 1430</h3>
+            <h6>Clients</h6>                             
           </div>
             <div>
-              <h5>+ 2430</h5>
-              <p>Beneficiaries</p>
+              <h3>+ 2430</h3>
+              <h6>Beneficiaries</h6>
           </div>
           <div>
-            <h5>+ 1430</h5>
-            <p>Positive Reviews</p>
+            <h3>+ 1430</h3>
+            <h6>Positive Reviews</h6>
           </div>
           <div>
-            <h5>+ 10.430</h5>
-            <p>Downloads</p>
+            <h3>+ 10.430</h3>
+            <h6>Downloads</h6>
      </div>
 
   </div>
