--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     
     <div class="container">
 
-        <div class="row mt-5">
+        <div class="row mt-5 align-items-center">
             <div class="col-12 col-lg-6 text-lg-start wow animate__animated animate__fadeInLeft">
                 <h1>Creative Way to Showcase Your APP</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati ipsa deleniti culpa, repudiandae iure laudantium!</p>
@@ -80,7 +80,7 @@
 
   <section class="my-5">
     <div class="container">
-      <div class="row">
+      <div class="row ">
 
         <div class="col-lg-3 col-sm-6 wow animate__animated animate__bounce" data-wow-offset="200">
           <div class="card-body p-4">
@@ -114,7 +114,7 @@
 
   <section> 
     <div class="container">
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-md-12 col-lg-6 circlephone">
           <img src="images/iPhone X - Light.png" class="wow animate__animated animate__fadeInLeft" data-wow-offset="200"data-wow-delay="0.4s"" alt="cirklar">
         </div>
