--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles.css">
 
-    <title>Johns Inlupp</title>
+    <title>John Stahre -2</title>
 </head>
 <body>
+<section class="wow animate__animated animate__fadeInDown" data-wow-offset="200" data-wow-delay="0.1s""" id="title">
+
 
     <div class="header-bg">
 
@@ -44,15 +46,15 @@
                           <li class="nav-item">
                             <a class="nav-link text-primary" aria-current="page" href="#">Contact Us</a>
                           </li>
-                          <button class="btn btn-warning text-white">Get the app</button>
+                          
 
                       </ul>
-
+                        <button class="btn btn-warning text-white ml-5 johns-knapp">Get the app</button>
                   </div>
             </div>
         </nav>
 
- 
+
  
 
     <!-- navbar end fixa färgerna bara -->
@@ -62,14 +64,15 @@
     <div class="container">
 
         <div class="row mt-5 align-items-center">
-            <div class="col-12 col-lg-6 text-lg-start wow animate__animated animate__fadeInLeft">
+            <div class="col-12 col-lg-6 text-lg-start wow animate__animated animate__fadeInLeft data-wow-offset="200" data-wow-delay="0.5s"">
                 <h1>Creative Way to Showcase Your APP</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati ipsa deleniti culpa, repudiandae iure laudantium!</p>
-                <button type="button" class="btn btn-outline-secondary">Primary</button>
-                <img src="images/Watch video.png" alt="">
+                <!-- <button class="johns-knapp">Download now</button> -->
+                <button type="button" class="btn btn-outline-light btn-lg me-3 johns-knapp">Download now</button>
+                <img src="images/Watch video.png" class="me-3" alt="">
             </div>
                 
-            <div class="mobile col-12 col-lg-6 wow animate__animated animate__fadeInRight">
+            <div class="mobile col-12 col-lg-6 wow animate__animated animate__fadeInRight data-wow-offset="200" data-wow-delay="0.4s"">
                 <img class="ml-2" src="images/Mobile.png" alt="">
             </div>
         </div>
@@ -77,6 +80,8 @@
 
 
   </div>
+
+ </section>
 
   <section class="my-5">
     <div class="container">
@@ -120,7 +125,7 @@
         </div>
         <div class="col-md-12 col-lg-6 wow animate__animated animate__fadeInRight" data-wow-offset="200"data-wow-delay="0.8s"">
           <div class="vertical"> 
-          <button class="btn-warning">About us</button>
+            <button type="button" class="btn btn-sm btn-primary mb-3" disabled>About us</button>
           <h1>Easy To Search Your Items By this app</h1>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam facilis autem voluptates suscipit quod mollitia fugiat! Magnam provident nesciunt aliquid eos asperiores hic laboriosam eligendi voluptate optio ea in vero voluptas, similique expedita? Nobis consectetur inventore ipsum cum, officiis nemo optio sed? Nobis cum eaque tenetur odit delectus minima at!</p>
           </div>
@@ -252,7 +257,8 @@
 </div>
 </div> 
 <div class="d-flex justify-content-center">
-<button class="bg bg-primary item-center">Send</button>
+  <button type="button" class="btn btn-lg btn-primary mt-4" disabled>Send</button>
+<!-- <button class="bg bg-primary item-center">Send</button> -->
 </div>
 </form>
 
