börja med att kolla översta knappen

--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
                   </button>
                   <div class="collapse navbar-collapse" id="navbar">
                       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
+                        <li class="nav-item navbar-item">
                             <a class="nav-link text-warning" aria-current="page" href="#"><u>Home</u></a>
                           </li>
-                          <li class="nav-item">
+                          <li class="nav-item navbar-item">
                             <a class="nav-link text-primarygit" aria-current="page" href="#">About Us</a>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-primary" aria-current="page" href="#">Features</a>
+                          <li class="nav-item navbar-item">
+                            <a class="nav-link" aria-current="page" href="#">Features</a>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-primary" aria-current="page" href="#">Screens</a>
+                          <li class="nav-item navbar-item">
+                            <a class="nav-link" aria-current="page" href="#">Screens</a>
                           </li>
-                          <li class="nav-item">
-                            <a class="nav-link text-primary" aria-current="page" href="#">Contact Us</a>
+                          <li class="nav-item navbar-item">
+                            <a class="nav-link" aria-current="page" href="#">Contact Us</a>
                           </li>
                           
 
                       </ul>
-                        <button class="btn btn-warning text-white ml-5 johns-knapp">Get the app</button>
+                        <button class="btn btn-warning text-white johns-knapp">Get the app</button>
                   </div>
             </div>
         </nav>
@@ -63,11 +63,10 @@
     
     <div class="container">
 
-        <div class="row mt-5 align-items-center">
+        <div class="row mt-4 align-items-center">
             <div class="col-12 col-lg-6 text-lg-start wow animate__animated animate__fadeInLeft data-wow-offset="200" data-wow-delay="0.5s"">
                 <h1>Creative Way to Showcase Your APP</h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati ipsa deleniti culpa, repudiandae iure laudantium!</p>
-                <!-- <button class="johns-knapp">Download now</button> -->
                 <button type="button" class="btn btn-outline-light btn-lg me-3 johns-knapp">Download now</button>
                 <img src="images/Watch video.png" class="me-3" alt="">
             </div>
